# polaris-device-subclient

./: LICENSE  README.md  pyproject.toml
config/: config.json  config.schema.json
scripts/: install.sh
src/polaris_device_subclient/: __init__.py  __main__.py  classifier.py  cli.py  config.py  connection.py  filter.py  models.py  output.py  redactor.py  secrets.py  transform.py
systemd/: polaris-device-subclient-file.service  polaris-device-subclient.env  polaris-device-subclient.logrotate
tests/: test_classifier.py  test_filter.py  test_output.py  test_transform.py
